# Structura

./: bun.lockb  package-lock.json  package.json
src/: App.tsx  GraphData_S.tsx  State_S.tsx  Statics.tsx
src-tauri/: .taurignore  Cargo.toml  tags  tauri.conf.json
src-tauri/src/: Rope.rs  evaluate_imports.rs  intense_evaluation.rs  io_operations.rs  main.rs  parents_checking.rs  project_data.rs  tag_entry.rs  use_llama.rs
src-tauri/src/data/: data_types.rs  mod.rs  regex_access_child.rs  regex_assignments.rs  regex_class.rs  regex_fun.rs  regex_function_call.rs  regex_interface.rs  regex_lambda.rs  regex_macros.rs  regex_object.rs
src-tauri/src/evaluate_imports/: languages_constants.rs  program_tag.rs  read_imports.rs
src-tauri/src/tag_entry/: file_walk.rs  imports_checking.rs  serialization.rs
src-tauri/src/tag_entry/file_walk/: language_scanners.rs  tag_reg_ex.rs
src/graph/: Graph.html  StructureDiagram.tsx
src/project_begin/: ProjectBegin.tsx
