[package]
name = "structura"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "path-all",
    "shell-all",
    "fs-read-dir",
    "dialog-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.11.1"
relative-path = "1.9.2"
phf = "0.11"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
